# strava-ui-streamlit

./: .gitignore  Dockerfile  Home.py  README.md  codecov.yml  coderabbit.config.json  dev_requirements.txt  pyproject.toml  requirements.txt  run_frontend_locally.ps1  update_data.py  update_local_data.py
.github/: pull_request_template.md
.github/workflows/: build-and-deploy.yml  build-pipeline.yml  deploy.yml  docker-publish.yml  publish.yml  update-data.yml
.streamlit/: config.toml
backend/: collect_data.py  data_collection.py  fetch_refresh_token.py  main.py
backend/functions/: authentication.py  collect_data.py  data_functions.py  github_actions.py
backend/functions/clients/: blob_client.py  strava_client.py
backend/functions/config/: variables.py
backend/functions/orchestration/: strava_scraper.py
backend/functions/services/: activities.py  welsh_coastal_path.py
backend/functions/utils/: utils.py
frontend/: Dockerfile  entrypoint.sh  main.py
frontend/functions/: data_functions.py  mapping.py  navigation.py  ui_components.py  ui_sections.py
frontend/pages/: activities.py  coastal_path.py  heatmap.py  home.py  pb_efforts.py  progress.py  triathlon_training.py
frontend/pages/frontend_sections/: pb_efforts_section.py  triathlon.py
functions/: authentication.py  collect_data.py  connect.py  github_actions.py  server.py  ui_components.py  variables.py
infra/: backend.tf  data.tf  main.tf  provider.tf  values.tfvars  variables.tf
pages/: Activities.py  Heatmap.py  Progress.py
tests/unit_tests/backend/: test_authentication.py
(+1 files in other folders)
