[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "strava-ui-streamlit"
version = "0.1.0"
description = "Python project to display strava data using streamlit"
authors = ["Rhys Powell"]
packages = [
    { include = "backend" },
    { include = "frontend" }
]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "1.0.1"
selenium = "4.25.0"
streamlit = "1.46.0"
Authlib = "1.5.1"
pandas = "2.2.3"
plotly = "6.0.1"
streamlit-components = { git = "https://github.com/powellrhys/python-streamlit-components.git", tag = "v0.1.6" }
behave = "1.2.6"
pytest = "8.3.4"
pytest-cov = "5.0.0"
sqlalchemy = "^2.0.35"
pyodbc = "^5.2.0"
greenlet = "^3.0.3"
folium = "^0.18.0"
polyline = "^2.0.2"
azure-storage-blob = "^12.19.0"

[tool.poetry.extras]
backend = ["selenium", "pandas"]
frontend = ["streamlit", "Authlib", "pandas", "plotly", "streamlit-components"]
testing = ["behave", "pytest", "pytest-cov"]
